@@ -15,4 +15,5 @@ Fs = int(1.0/dt)
 Noverlap = 0
 Pxx, freqs, bins, im = specgram(x, NFFT=NFFT, Fs=Fs, noverlap=900)
 gca().set_xticks(arange(0,21,5))
+colorbar()
 show()
